# szip

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  build.bat  build.sh
.github/workflows/: cmake.yml
include/szip/: codec.h  compress.h  decompress.h  errors.h  format.h
src/: main.cpp
src/api/: compress.cpp  decompress.cpp
src/archive/: archive_reader.cpp  archive_reader.h  archive_writer.cpp  archive_writer.h  stream_compressor.cpp  stream_compressor.h
src/codec/: codec.cpp  huffman.cpp  huffman.h  lzw.cpp  lzw.h
src/io/: bitstream.cpp  bitstream.h  crc32.cpp  crc32.h
src/tar/: tar.cpp  tar.h
src/tui/: app.cpp  app.h  compress_view.cpp  compress_view.h  extract_view.cpp  extract_view.h  file_picker.cpp  file_picker.h  list_view.cpp  list_view.h  main_menu.cpp  main_menu.h  progress_view.cpp  progress_view.h  utf8_utils.h
